# wtplan

./: .gitconfig  .gitignore  .pre-commit-config.yaml  .wtplan.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: typer-cli-design.md
src/wtplan/: cli.py  core.py  inventory.py  mcp_server.py  policy.py
tests/: conftest.py  test_cli.py  test_inventory.py  test_repo_operations.py
